[package]
name = "tari-lmdb-inspector"
version = "0.3.0"
edition = "2024"
authors = ["Jorge <oieieio@protonmail.com>"]
description = "Multi-interface Tari blockchain explorer with TUI and Web dashboards"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["tari", "blockchain", "lmdb", "explorer", "dashboard"]
categories = ["command-line-utilities", "database", "web-programming"]


[dependencies]
# LMDB database access
lmdb-zero = "0.4.4"

# Data encoding and serialization
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Cryptography and hashing
blake3 = "1.5"

# Error handling
anyhow = "1.0"

# Date and time handling
chrono = { version = "0.4.41", features = ["std", "clock"] }

# Terminal UI (ratatui)
ratatui = "0.28"
crossterm = "0.28"

# Web server and WebSocket
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde_json = "1.0"

# Async traits and utilities
async-trait = "0.1"
futures = "0.3"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Tari blockchain dependencies
tari_node_components = { git = "https://github.com/tari-project/tari.git"}
tari_transaction_components = { git = "https://github.com/tari-project/tari.git"}
tari_core = { git = "https://github.com/tari-project/tari.git"}
tari_common_types = { git = "https://github.com/tari-project/tari.git"}
notify = "8.2.0"
tari_utilities ="0.8.0"

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
# Optimized for performance
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
# Optimize dependencies even in debug mode
opt-level = 3

[[bin]]
name = "tari-lmdb-inspector"
path = "src/main.rs"

[package.metadata.docs.rs]
# Documentation settings
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
